--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Example</title>
+  <title>BlogWorld!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Do not add `link` tags unless you know what you are doing -->
@@ -14,8 +14,9 @@
 </head>
 
 <body class="container-fluid">
-  <h1>Example</h1>
-
+  <br>
+  <br>
+  <br>
   <!-- BEGIN NAV BAR -->
   <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
       <div class="container-fluid">
@@ -27,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand brand-title" href="#">Expecto Pantry</a>
+          <a class="navbar-brand brand-title" href="#">BlogWorld!</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -44,7 +45,8 @@
       <!-- /.container-fluid -->
     </nav>
     <!-- END NAV BAR -->
-
+<!-- Visitor Div -->
+  <div class="container">
   <!-- BEGIN JUMBOTRON -->
   <div class="jumbotron splash-jumbo">
     <h1 class="display-3 expecto-jumbo-text">BlogWorld</h1>
@@ -54,7 +56,9 @@
     </p>
   </div>
   <!-- END JUMBOTRON -->
-
+  <button id="showBlogButton" class="btn btn-default showBlogButton" data-toggle="tooltip" title="Click here to see some recent blogs!">Recent Blogs!</button>
+  <!-- END Visitor Div -->
+</div>
   <!-- Sign-in Modal -->
   <div class="modal fade" id="sign-in-modal" tabindex="-1" role="dialog" aria-labelledby="sign-in-modal" aria-hidden="true">
     <div class="modal-dialog modal-sm">
