--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="container">
   <!-- BEGIN JUMBOTRON -->
   <div class="jumbotron splash-jumbo">
-    <h1 class="display-3 expecto-jumbo-text">BlogWorld</h1>
+    <h1 class="display-3 expecto-jumbo-text">Bob Loblaw's Law Blog</h1>
     <p class="lead"></p>
     <p class="lead">
       <a class="btn btn-primary btn-lg sign-in-modal-btn" id="sign-in-modal-btn" data-toggle="modal" data-target="#sign-in-modal" href="#" role="button">Get Started</a>
@@ -59,6 +59,13 @@
   <button id="showBlogButton" class="btn btn-default showBlogButton" data-toggle="tooltip" title="Click here to see some recent blogs!">Recent Blogs!</button>
   <!-- END Visitor Div -->
 </div>
+<!-- User Div -->
+  <div class="container">
+    <p> Welcome Back </p>
+    <div class="container well col-md-6">Blog Posts</div>
+    <div class="container well col-md-6">Pages</div>
+
+  </div>
   <!-- Sign-in Modal -->
   <div class="modal fade" id="sign-in-modal" tabindex="-1" role="dialog" aria-labelledby="sign-in-modal" aria-hidden="true">
     <div class="modal-dialog modal-sm">
