Corrected Change Password Modal
Fixed the Cpw modal to show on click

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <ul class="nav navbar-nav">
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href=# id=change-password-modal-link>Change Password</a></li>
+            <li><a href=# id="change-password-modal-link" data-toggle="modal" data-target="#change-password-modal">Change Password</a></li>
             <li id="sign-out" class="in-session-auth authentication"><a href="#">Sign Out</a></li>
           </ul>
         </div>
@@ -167,14 +167,14 @@
                        <span class="sr-only">Close</span>
                 </button>
           <h4 class="modal-title" id="change-password-modal-label">
-                    Create an Account
+                    Change Password
                 </h4>
         </div>
 
         <!-- change-password Modal Body -->
         <div class="modal-body">
 
-          <form id="change-password" role="form">
+          <form id="change-password-modal" role="form">
             <div class="form-group">
             </div>
             <div class="form-group">
