--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
   <!-- END Visitor Div -->
 </div>
 <!-- User Div -->
-  <div class="container">
-    <p> Welcome Back </p>
-    <div class="container well col-md-6">Blog Posts</div>
-    <div class="container well col-md-6">Pages</div>
-
-  </div>
+ <div class="container userDiv">
+   <p> Welcome Back </p>
+   <div class="container well col-md-6">Blog Posts
+     <button id="createBlogButton" role="button" class="btn btn-default createBlogButton" data-toggle="modal" data-target="#createBlogModal" >Create new Blog!</button>
+   </div>
+   <div class="container well col-md-6">Pages
+     <button id="createPageButton" class="btn btn-default createPageButton" data-toggle="tooltip" title="Click here to create a page!">Create new Page!</button>
+   </div>
+ </div>
   <!-- Sign-in Modal -->
   <div class="modal fade" id="sign-in-modal" tabindex="-1" role="dialog" aria-labelledby="sign-in-modal" aria-hidden="true">
     <div class="modal-dialog modal-sm">
@@ -197,5 +200,48 @@
   </div>
   <!-- END CHANGE PASSWORD MODAL -->
   <!-- END USER AUTH MODAL -->
+
+  <!-- BEGIN CREATE MODALS -->
+  <!-- BEGIN CREATE PAGE MODAL -->
+  <!-- create-page modal -->
+  <div class="modal fade" id="createBlogModal" tabindex="-1" role="dialog" aria-labelledby="create-blog-modal" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">
+                       <span aria-hidden="true">&times;</span>
+                       <span class="sr-only">Close</span>
+                </button>
+          <h4 class="modal-title" id="change-password-modal-label">
+                    Create Blog Post
+                </h4>
+        </div>
+
+        <!--create blog Modal Body -->
+        <div class="modal-body">
+
+          <form id="create-blog-form" role="form">
+            <div class="form-group">
+            </div>
+            <div class="form-group">
+              <label for="create-title-confirmation">Title</label>
+              <input type="text" class="form-control" name="post[title]" id="create-blog-title" placeholder="Title" />
+            </div>
+            <div class="form-group">
+              <label for="create-body-confirmation">Body</label>
+              <input type="text" class="form-control" name="post[body]" id="create-blog-body" placeholder="Body" />
+            </div>
+            <!-- <button type="submit" class="btn btn-default">Submit</button> -->
+            <input type="submit" class="btn btn-default" name="submit" value="Create Blog">
+            <div id="create-blog-status" class="blog-status">
+              <span><p>Create blog had an issue, try again!</p></span>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- END CREATE BLOG MODAL -->
 
 </html>
