--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
      <button id="createBlogButton" role="button" class="btn btn-default createBlogButton" data-toggle="modal" data-target="#createBlogModal" >Create new Blog!</button>
    </div>
    <div class="container well col-md-6">Pages
-     <button id="createPageButton" class="btn btn-default createPageButton" data-toggle="tooltip" title="Click here to create a page!">Create new Page!</button>
+     <button id="createPageButton" role="button" class="btn btn-default createPageButton" data-toggle="modal" data-target="#createPageModal">Create new Page!</button>
    </div>
  </div>
   <!-- Sign-in Modal -->
@@ -202,8 +202,8 @@
   <!-- END USER AUTH MODAL -->
 
   <!-- BEGIN CREATE MODALS -->
-  <!-- BEGIN CREATE PAGE MODAL -->
-  <!-- create-page modal -->
+  <!-- BEGIN CREATE BLOG MODAL -->
+  <!-- create-blog modal -->
   <div class="modal fade" id="createBlogModal" tabindex="-1" role="dialog" aria-labelledby="create-blog-modal" aria-hidden="true">
     <div class="modal-dialog modal-sm">
       <div class="modal-content">
@@ -243,5 +243,46 @@
     </div>
   </div>
   <!-- END CREATE BLOG MODAL -->
+  <!-- BEGIN CREATE PAGE MODAL -->
+  <!-- create-page modal -->
+  <div class="modal fade" id="createPageModal" tabindex="-1" role="dialog" aria-labelledby="create-page-modal" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">
+                       <span aria-hidden="true">&times;</span>
+                       <span class="sr-only">Close</span>
+                </button>
+          <h4 class="modal-title" id="create-page-modal-label">
+                    Create Page
+                </h4>
+        </div>
+
+        <!--create page Modal Body -->
+        <div class="modal-body">
+
+          <form id="create-blog-form" role="form">
+            <div class="form-group">
+            </div>
+            <div class="form-group">
+              <label for="create-title-confirmation">Title</label>
+              <input type="text" class="form-control" name="page[title]" id="create-page-title" placeholder="Title" />
+            </div>
+            <div class="form-group">
+              <label for="create-body-confirmation">Body</label>
+              <input type="text" class="form-control" name="page[body]" id="create-page-body" placeholder="Body" />
+            </div>
+            <!-- <button type="submit" class="btn btn-default">Submit</button> -->
+            <input type="submit" class="btn btn-default" name="submit" value="Create Page">
+            <div id="create-page-status" class="page-status">
+              <span><p>Create page had an issue, try again!</p></span>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- END CREATE PAGE MODAL -->
 
 </html>
