Fixed the Create Page Form ID
I changed the id of the create page form to line up correctly
to pages instead of posts.

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <!--create page Modal Body -->
         <div class="modal-body">
 
-          <form id="create-blog-form" role="form">
+          <form id="create-page-form" role="form">
             <div class="form-group">
             </div>
             <div class="form-group">
