Initial Handlebars Get Functionality
Committing changes that allow a 'visitor' to get ALL blog posts.
Added a handlebars template and get function.

--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
   </div>
   <!-- END JUMBOTRON -->
   <button id="showBlogButton" class="btn btn-default showBlogButton" data-toggle="tooltip" title="Click here to see some recent blogs!">Recent Blogs!</button>
+<div class="container well visitorDiv">
+</div>
   <!-- END Visitor Div -->
 </div>
 <!-- User Div -->
  <div class="container userDiv">
    <p> Welcome Back </p>
-   <div class="container well col-md-6">Blog Posts
+   <div id="blogBody" class="container well col-md-6 blog">Blog Posts
      <button id="createBlogButton" role="button" class="btn btn-default createBlogButton" data-toggle="modal" data-target="#createBlogModal" >Create new Blog!</button>
    </div>
    <div class="container well col-md-6">Pages
