--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         </form>
       </div>
     </div>
+    <a class="btn btn-primary" id="cur-user-blogs" role="button">Current User Blogs</a>
   </div>
   <!-- Sign-in Modal -->
   <div class="modal fade" id="sign-in-modal" tabindex="-1" role="dialog" aria-labelledby="sign-in-modal" aria-hidden="true">
