Added space for handebar form
Added a new div at the bottom of the html page that will serve as a
placeholder for the user handlebar functionality.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
         </form>
       </div>
     </div>
+  </div>
+  <div class="container">
     <a class="btn btn-primary" id="cur-user-blogs" role="button">Current User Blogs</a>
+    <div id="userHandlebarBody" class="contextBody">
+    </div>
   </div>
   <!-- Sign-in Modal -->
   <div class="modal fade" id="sign-in-modal" tabindex="-1" role="dialog" aria-labelledby="sign-in-modal" aria-hidden="true">
