Adding well class to index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div>
   <div class="container">
     <a class="btn btn-primary" id="cur-user-blogs" role="button">Current User Blogs</a>
-    <div id="userHandlebarBody" class="contextBody">
+    <div id="userHandlebarBody" class="well contextBody">
     </div>
   </div>
   <!-- Sign-in Modal -->
