--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <br>
   <br>
   <!-- BEGIN NAV BAR -->
-  <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
+  <nav class="navbar navbar-default navbar-fixed-top navbar-inverse hidden user-view">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -48,7 +48,7 @@
   <!-- Visitor Div -->
   <div class="container">
     <!-- BEGIN JUMBOTRON -->
-    <div class="jumbotron splash-jumbo">
+    <div class="jumbotron splash-jumbo visitor-view">
       <h1 class="display-3 expecto-jumbo-text">Bob Loblaw's Law Blog</h1>
       <p class="lead"></p>
       <p class="lead">
@@ -72,10 +72,10 @@
   <!-- User Div -->
   <div class="container userDiv">
     <p id="welcomeEmail"></p>
-    <div class="container well col-md-3">Pages
+    <div class="container well col-md-3 createPageDiv hidden user-view">Pages
       <button id="createPageButton" role="button" class="btn btn-default createPageButton" data-toggle="modal" data-target="#createPageModal">Create new Page!</button>
     </div>
-    <div id="blogBody" class="container well col-md-12 blog">
+    <div id="blogBody" class="container well col-md-12 blog hidden user-view">
       <!-- Blog Text Area -->
       <div id='blogTextArea' class="container well col-md-9 blog">
         <form id="blogCreateForm">
@@ -88,7 +88,7 @@
     </div>
   </div>
   <div class="container">
-    <a class="btn btn-primary" id="cur-user-blogs" role="button">Current User Blogs</a>
+    <a class="btn btn-primary hidden user-view" id="cur-user-blogs" role="button">Current User Blogs</a>
     <div id="userHandlebarBody" class="contextBody">
     </div>
   </div>
