Resolve merge conflict
Merge conflict between frontend branch and dev branch.
Conflict is resolve by adding in changed from dev branch into
frontend branch.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
   <div class="container">
     <a class="btn btn-primary hidden user-view" id="cur-user-blogs" role="button">Current User Blogs</a>
-    <div id="userHandlebarBody" class="contextBody">
+    <div id="userHandlebarBody" class="well contextBody">
     </div>
   </div>
   <!-- Sign-in Modal -->
