--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
   </div>
   <div class="container">
     <a class="btn btn-primary hidden user-view" id="cur-user-blogs" role="button">Current User Blogs</a>
+    <a class="btn btn-primary hidden user-view" id="cur-user-pages" role="button">Current User Pages</a>
     <div id="userHandlebarBody" class="well contextBody">
     </div>
   </div>
