--- a/index.html
+++ b/index.html
@@ -271,6 +271,14 @@
               <label for="create-footer-confirmation">Footer</label>
               <input type="text" class="form-control" name="page[footer]" id="create-page-footer" placeholder="Footer" />
             </div>
+            <label for="create-body-confirmation">Background-Color</label>
+            <select name="background-color">
+              <option value="default-white">Default (White)</option>
+              <option value="red">Red</option>
+              <option value="blue">Blue</option>
+              <option value="green">Green</option>
+            </select>
+            <br>
             <!-- <button type="submit" class="btn btn-default">Submit</button> -->
             <input type="submit" class="btn btn-default" name="submit" value="Create Page">
             <div id="create-page-status" class="page-status">
