Welcome user styling changes
Adds a new class to style the welcome user div, changes the font,
and clears the create page to new line.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
   </div>
   <!-- User Div -->
   <div class="container userDiv">
-    <p id="welcomeEmail"></p>
+    <p id="welcomeEmail" class="hidden col-md-3 well user-view welcomeUser"></p>
+    <br>
     <div class="container well col-md-3 createPageDiv hidden user-view">Pages
       <button id="createPageButton" role="button" class="btn btn-default createPageButton" data-toggle="modal" data-target="#createPageModal">Create new Page!</button>
     </div>
