--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
 <!-- TAB FOR VISITOR BLOGS/PAGES -->
-<div>
+<div class="visitor-view">
 
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
