Adds create page dropdown and clears after success
Changes create page dropdown to have new correct values for
template. Also clears out page fields and sets template back
to default upon create page success.

--- a/index.html
+++ b/index.html
@@ -141,14 +141,13 @@
             <div id='pageTextArea' class="container well col-md-9 page">
               <form id="create-page-form" role="form">
                 <textarea id="create-page-title" rows="2" cols="75" name="page[title]" placeholder="Enter page title!"></textarea>
-                <textarea id="create-page-body" rows="15" cols="75" name="page[body]" placeholder="Enter page Body!"></textarea>
-                <textarea id="create-page-footer" rows="2" cols="75" name="page[footer]" placeholder="Enter page title!"></textarea>
-              <label for="create-body-confirmation">Background-Color</label>
-              <select name="background-color">
-                <option value="default-white">Default (White)</option>
-                <option value="red">Red</option>
-                <option value="blue">Blue</option>
-                <option value="green">Green</option>
+                <textarea id="create-page-body" rows="15" cols="75" name="page[body]" placeholder="Enter page body!"></textarea>
+                <textarea id="create-page-footer" rows="2" cols="75" name="page[footer]" placeholder="Enter page footer!"></textarea>
+              <label for="create-body-confirmation">Template</label>
+              <select name="page[template]" id="create-page-template">
+                <option value="defaultTemplate">Default</option>
+                <option value="coolTemplate">Cool</option>
+                <option value="fancyTemplate">Fancy</option>
               </select>
                 <button id="createPageButton" type="submit" role="button" class="btn btn-default createPageButton">Submit your Page!</button>
                 <!-- <span><p>Create page had an issue, try again!</p></span> -->
