--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
                 <textarea id="create-page-title" rows="2" cols="75" name="page[title]" placeholder="Enter page title!"></textarea>
                 <textarea id="create-page-body" rows="15" cols="75" name="page[body]" placeholder="Enter page body!"></textarea>
                 <textarea id="create-page-footer" rows="2" cols="75" name="page[footer]" placeholder="Enter page footer!"></textarea>
-              <label for="create-body-confirmation">Template</label>
+                <br>
+              <label for="create-body-confirmation">Choose Template</label>
               <select name="page[template]" id="create-page-template">
                 <option value="defaultTemplate">Default</option>
                 <option value="coolTemplate">Cool</option>
@@ -154,6 +155,22 @@
                 <button id="createPageButton" type="submit" role="button" class="btn btn-default createPageButton">Submit your Page!</button>
                 <!-- <span><p>Create page had an issue, try again!</p></span> -->
               </form>
+              <h2>Example Templates</h2>
+              <div class="well">
+                <div class='defaultTemplate col-md-4'>Default Template
+                  <br><br>
+                  <p>This is what your body what look like using the default template. </p>
+                  <p>Footer</p>
+                </div>
+                <div class='coolTemplate col-md-4'>Cool Template
+                  <br><br>
+                  <p>This is what your body what look like using the cool template. </p>
+                  <p>Footer</p></div>
+                  <div class='fancyTemplate col-md-4'>Fancy Template
+                    <br><br>
+                    <p>This is what your body what look like using the fancy template. </p>
+                    <p>Footer</p></div>
+                  </div>
             </div>
           </div>
         </div>
