Fixed labelling for links and tabs
Changed "Recent" labels to "All"
Removed 'See All Blogs' as it's no longer needed in the dropdown

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Your Blog Stuff <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#" id='#' data-toggle="modal" data-target="#">See all blogs</a></li>
-              <li role="separator" class="divider"></li>
+              <!-- <li role="separator" class="divider"></li> -->
               <li id="sign-out" class="in-session-auth authentication"><a href="#">Sign Out</a></li>
               <li><a href="#" data-toggle="modal" id="change-password-modal-link" data-target="#change-password-modal">Change Password</a></li>
             </ul>
@@ -74,8 +73,8 @@
 
       <!-- Nav tabs -->
       <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a id="showBlogButton" href="#recent-blogs" aria-controls="recent-blogs" role="tab" data-toggle="tab">Recent Blogs</a></li>
-        <li role="presentation"><a id="showPageButton" href="#recent-pages" aria-controls="recent-pages" role="tab" data-toggle="tab">Recent Pages</a></li>
+        <li role="presentation" class="active"><a id="showBlogButton" href="#recent-blogs" aria-controls="recent-blogs" role="tab" data-toggle="tab">All Blogs</a></li>
+        <li role="presentation"><a id="showPageButton" href="#recent-pages" aria-controls="recent-pages" role="tab" data-toggle="tab">All Pages</a></li>
       </ul>
 
       <!-- Tab panes -->
