--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <!-- Nav tabs -->
       <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a id="showBlogButton" href="#recent-blogs" aria-controls="recent-blogs" role="tab" data-toggle="tab">All Blogs</a></li>
+        <li role="presentation" id="tabs" class="active"><a id="showBlogButton" href="#recent-blogs" aria-controls="recent-blogs" role="tab" data-toggle="tab">All Blogs</a></li>
         <li role="presentation"><a id="showPageButton" href="#recent-pages" aria-controls="recent-pages" role="tab" data-toggle="tab">All Pages</a></li>
       </ul>
 
@@ -108,7 +108,7 @@
       <!-- Nav tabs -->
       <div id="welcomeEmail" class="navbar-brand hidden user-view welcomeUser"></div>
       <ul class="nav nav-tabs navbar-right" role="tablist">
-        <li role="presentation" class="active"><a href="#create-blog" aria-controls="create-blog" role="tab" data-toggle="tab" class="hidden user-view">Create Blog</a></li>
+        <li role="presentation" id="tabs" class="active"><a href="#create-blog" aria-controls="create-blog" role="tab" data-toggle="tab" class="hidden user-view">Create Blog</a></li>
         <li role="presentation"><a href="#create-page" aria-controls="create-page" role="tab" data-toggle="tab" class="hidden user-view">Create Page</a></li>
         <li role="presentation"><a href="#user-blogs" aria-controls="user-blogs" role="tab" data-toggle="tab" class="hidden user-view" id="cur-user-blogs">View/Edit Your Blogs</a></li>
         <li role="presentation"><a href="#user-pages" aria-controls="user-pages" role="tab" data-toggle="tab" class="hidden user-view" id="cur-user-pages">View/Edit Your Pages</a></li>
