Index Success Div
Adding empty success feedback Div for Joe to work on.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   <div class="container userDiv">
     <!-- <p id="welcomeEmail" class="hidden col-md-3 well user-view welcomeUser"></p> -->
     <br>
+    <div class='userFeedback col-md-12 hidden user-view'></div>
     <!-- BEGIN USER TABS -->
     <div class='userTabs'>
       <!-- Nav tabs -->
